@@ -16,13 +16,26 @@
  */
 package org.apache.solr.handler;
 
+import static java.util.Collections.singletonMap;
+import static org.apache.solr.common.params.CommonParams.JSON;
+import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.COPY_FIELDS;
+import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.DYNAMIC_FIELDS;
+import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.FIELDS;
+import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.FIELD_TYPES;
+
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
-import java.util.*;
-import java.util.function.BiConsumer;
-
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import org.apache.solr.api.AnnotatedApi;
 import org.apache.solr.api.Api;
 import org.apache.solr.api.ApiBag;
+import org.apache.solr.api.JerseyResource;
 import org.apache.solr.cloud.ZkSolrResourceLoader;
 import org.apache.solr.common.MapWriter;
 import org.apache.solr.common.SolrException;
@@ -32,9 +45,23 @@ import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.common.util.SimpleOrderedMap;
 import org.apache.solr.common.util.StrUtils;
-import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.PluginInfo;
 import org.apache.solr.core.SolrCore;
+import org.apache.solr.handler.admin.api.SchemaBulkModifyAPI;
+import org.apache.solr.handler.admin.api.SchemaGetDynamicFieldAPI;
+import org.apache.solr.handler.admin.api.SchemaGetFieldAPI;
+import org.apache.solr.handler.admin.api.SchemaGetFieldTypeAPI;
+import org.apache.solr.handler.admin.api.SchemaInfoAPI;
+import org.apache.solr.handler.admin.api.SchemaListAllCopyFieldsAPI;
+import org.apache.solr.handler.admin.api.SchemaListAllDynamicFieldsAPI;
+import org.apache.solr.handler.admin.api.SchemaListAllFieldTypesAPI;
+import org.apache.solr.handler.admin.api.SchemaListAllFieldsAPI;
+import org.apache.solr.handler.admin.api.SchemaNameAPI;
+import org.apache.solr.handler.admin.api.SchemaSimilarityAPI;
+import org.apache.solr.handler.admin.api.SchemaUniqueKeyAPI;
+import org.apache.solr.handler.admin.api.SchemaVersionAPI;
+import org.apache.solr.handler.admin.api.SchemaZkVersionAPI;
+import org.apache.solr.handler.api.V2ApiUtils;
 import org.apache.solr.pkg.PackageListeningClassLoader;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.request.SolrRequestHandler;
@@ -50,33 +77,23 @@ import org.apache.solr.util.plugin.SolrCoreAware;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import static java.util.Collections.singletonMap;
-import static org.apache.solr.common.params.CommonParams.JSON;
-import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.COPY_FIELDS;
-import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.DYNAMIC_FIELDS;
-import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.FIELDS;
-import static org.apache.solr.schema.IndexSchema.SchemaProps.Handler.FIELD_TYPES;
-
 @SuppressWarnings({"unchecked"})
-public class SchemaHandler extends RequestHandlerBase implements SolrCoreAware, PermissionNameProvider {
+public class SchemaHandler extends RequestHandlerBase
+    implements SolrCoreAware, PermissionNameProvider {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
   private boolean isImmutableConfigSet = false;
   private SolrRequestHandler managedResourceRequestHandler;
 
-  private static final Map<String, String> level2;
+  // java.util factory collections do not accept null values, so we roll our own
+  private static final Map<String, String> level2 = new HashMap<>();
 
   static {
-    @SuppressWarnings({"rawtypes"})
-    Map s = Utils.makeMap(
-        FIELD_TYPES.nameLower, null,
-        FIELDS.nameLower, "fl",
-        DYNAMIC_FIELDS.nameLower, "fl",
-        COPY_FIELDS.nameLower, null
-    );
-
-    level2 = Collections.unmodifiableMap(s);
+    level2.put(FIELD_TYPES.nameLower, null);
+    level2.put(FIELDS.nameLower, "fl");
+    level2.put(DYNAMIC_FIELDS.nameLower, "fl");
+    level2.put(COPY_FIELDS.nameLower, null);
   }
-
+  ;
 
   @Override
   public void handleRequestBody(SolrQueryRequest req, SolrQueryResponse rsp) throws Exception {
@@ -91,12 +108,13 @@ public class SchemaHandler extends RequestHandlerBase implements SolrCoreAware, 
       }
 
       try {
-        @SuppressWarnings({"rawtypes"})
-        List errs = new SchemaManager(req).performOperations();
+        List<Map<String, Object>> errs = new SchemaManager(req).performOperations();
         if (!errs.isEmpty())
-          throw new ApiBag.ExceptionWithErrObject(SolrException.ErrorCode.BAD_REQUEST,"error processing commands", errs);
+          throw new ApiBag.ExceptionWithErrObject(
+              SolrException.ErrorCode.BAD_REQUEST, "error processing commands", errs);
       } catch (IOException e) {
-        throw new SolrException(SolrException.ErrorCode.BAD_REQUEST, "Error reading input String " + e.getMessage(), e);
+        throw new SolrException(
+            SolrException.ErrorCode.BAD_REQUEST, "Error reading input String " + e.getMessage(), e);
       }
     } else {
       handleGET(req, rsp);
@@ -131,76 +149,81 @@ public class SchemaHandler extends RequestHandlerBase implements SolrCoreAware, 
           rsp.add(IndexSchema.UNIQUE_KEY, req.getSchema().getUniqueKeyField().getName());
           break;
         case "/schema/similarity":
-          rsp.add(IndexSchema.SIMILARITY, req.getSchema().getSimilarityFactory().getNamedPropertyValues());
+          rsp.add(
+              IndexSchema.SIMILARITY,
+              req.getSchema().getSimilarityFactory().getNamedPropertyValues());
           break;
-        case "/schema/name": {
-          final String schemaName = req.getSchema().getSchemaName();
-          if (null == schemaName) {
-            String message = "Schema has no name";
-            throw new SolrException(SolrException.ErrorCode.NOT_FOUND, message);
+        case "/schema/name":
+          {
+            V2ApiUtils.squashIntoSolrResponseWithoutHeader(
+                rsp, new SchemaNameAPI(req.getCore()).getSchemaName());
+            break;
           }
-          rsp.add(IndexSchema.NAME, schemaName);
-          break;
-        }
-        case "/schema/zkversion": {
-          int refreshIfBelowVersion = req.getParams().getInt("refreshIfBelowVersion");
-          int zkVersion = -1;
-          IndexSchema schema = req.getSchema();
-          if (schema instanceof ManagedIndexSchema) {
-            ManagedIndexSchema managed = (ManagedIndexSchema) schema;
-            zkVersion = managed.getSchemaZkVersion();
-            if (refreshIfBelowVersion != -1 && zkVersion < refreshIfBelowVersion) {
-              log.info("REFRESHING SCHEMA (refreshIfBelowVersion={}, currentVersion={}) before returning version!"
-                  , refreshIfBelowVersion, zkVersion);
-              ZkSolrResourceLoader zkSolrResourceLoader = (ZkSolrResourceLoader) req.getCore().getResourceLoader();
-              ZkIndexSchemaReader zkIndexSchemaReader = zkSolrResourceLoader.getZkIndexSchemaReader();
-              managed = zkIndexSchemaReader.refreshSchemaFromZk(refreshIfBelowVersion);
+        case "/schema/zkversion":
+          {
+            int refreshIfBelowVersion = req.getParams().getInt("refreshIfBelowVersion", -1);
+            int zkVersion = -1;
+            IndexSchema schema = req.getSchema();
+            if (schema instanceof ManagedIndexSchema) {
+              ManagedIndexSchema managed = (ManagedIndexSchema) schema;
               zkVersion = managed.getSchemaZkVersion();
+              if (refreshIfBelowVersion != -1 && zkVersion < refreshIfBelowVersion) {
+                log.info(
+                    "REFRESHING SCHEMA (refreshIfBelowVersion={}, currentVersion={}) before returning version!",
+                    refreshIfBelowVersion,
+                    zkVersion);
+                ZkSolrResourceLoader zkSolrResourceLoader =
+                    (ZkSolrResourceLoader) req.getCore().getResourceLoader();
+                ZkIndexSchemaReader zkIndexSchemaReader =
+                    zkSolrResourceLoader.getZkIndexSchemaReader();
+                managed = zkIndexSchemaReader.refreshSchemaFromZk(refreshIfBelowVersion);
+                zkVersion = managed.getSchemaZkVersion();
+              }
             }
+            rsp.add("zkversion", zkVersion);
+            break;
           }
-          rsp.add("zkversion", zkVersion);
-          break;
-        }
-        default: {
-          List<String> parts = StrUtils.splitSmart(path, '/', true);
-          if (parts.size() > 1 && level2.containsKey(parts.get(1))) {
-            String realName = parts.get(1);
-            String fieldName = IndexSchema.nameMapping.get(realName);
+        default:
+          {
+            List<String> parts = StrUtils.splitSmart(path, '/', true);
+            if (parts.size() > 1 && level2.containsKey(parts.get(1))) {
+              String realName = parts.get(1);
+              String fieldName = IndexSchema.nameMapping.get(realName);
 
-            String pathParam = level2.get(realName);
-            if (parts.size() > 2) {
-              req.setParams(SolrParams.wrapDefaults(new MapSolrParams(singletonMap(pathParam, parts.get(2))), req.getParams()));
-            }
-            @SuppressWarnings({"rawtypes"})
-            Map propertyValues = req.getSchema().getNamedPropertyValues(realName, req.getParams());
-            Object o = propertyValues.get(fieldName);
-            if(parts.size()> 2) {
-              String name = parts.get(2);
-              if (o instanceof List) {
-                @SuppressWarnings({"rawtypes"})
-                List list = (List) o;
-                for (Object obj : list) {
-                  if (obj instanceof SimpleOrderedMap) {
-                    @SuppressWarnings({"rawtypes"})
-                    SimpleOrderedMap simpleOrderedMap = (SimpleOrderedMap) obj;
-                    if(name.equals(simpleOrderedMap.get("name"))) {
-                      rsp.add(fieldName.substring(0, realName.length() - 1), simpleOrderedMap);
-                      insertPackageInfo(rsp.getValues(), req);
-                      return;
+              String pathParam = level2.get(realName); // Might be null
+              if (parts.size() > 2) {
+                req.setParams(
+                    SolrParams.wrapDefaults(
+                        new MapSolrParams(singletonMap(pathParam, parts.get(2))), req.getParams()));
+              }
+              Map<String, Object> propertyValues =
+                  req.getSchema().getNamedPropertyValues(realName, req.getParams());
+              Object o = propertyValues.get(fieldName);
+              if (parts.size() > 2) {
+                String name = parts.get(2);
+                if (o instanceof List) {
+                  List<?> list = (List<?>) o;
+                  for (Object obj : list) {
+                    if (obj instanceof SimpleOrderedMap) {
+                      SimpleOrderedMap<?> simpleOrderedMap = (SimpleOrderedMap<?>) obj;
+                      if (name.equals(simpleOrderedMap.get("name"))) {
+                        rsp.add(fieldName.substring(0, realName.length() - 1), simpleOrderedMap);
+                        insertPackageInfo(rsp.getValues(), req);
+                        return;
+                      }
                     }
                   }
                 }
+                throw new SolrException(SolrException.ErrorCode.NOT_FOUND, "No such path " + path);
+              } else {
+                rsp.add(fieldName, o);
               }
-              throw new SolrException(SolrException.ErrorCode.NOT_FOUND, "No such path " + path);
-            } else {
-              rsp.add(fieldName, o);
+              insertPackageInfo(rsp.getValues(), req);
+              return;
             }
-            insertPackageInfo(rsp.getValues(), req);
-            return;
-          }
 
-          throw new SolrException(SolrException.ErrorCode.NOT_FOUND, "No such path " + path);
-        }
+            throw new SolrException(SolrException.ErrorCode.NOT_FOUND, "No such path " + path);
+          }
       }
 
     } catch (Exception e) {
@@ -209,48 +232,52 @@ public class SchemaHandler extends RequestHandlerBase implements SolrCoreAware, 
   }
 
   /**
-   * If a plugin is loaded from a package, the version of the package being used should be added
-   * to the response
+   * If a plugin is loaded from a package, the version of the package being used should be added to
+   * the response
    */
-  @SuppressWarnings("rawtypes")
   private void insertPackageInfo(Object o, SolrQueryRequest req) {
     if (!req.getParams().getBool("meta", false)) return;
     if (o instanceof List) {
-      List l = (List) o;
+      List<?> l = (List<?>) o;
       for (Object o1 : l) {
         if (o1 instanceof NamedList || o1 instanceof List) insertPackageInfo(o1, req);
       }
 
     } else if (o instanceof NamedList) {
-      NamedList nl = (NamedList) o;
-      nl.forEach((BiConsumer) (n, v) -> {
-        if (v instanceof NamedList || v instanceof List) insertPackageInfo(v, req);
-      });
+      @SuppressWarnings("unchecked")
+      NamedList<Object> nl = (NamedList<Object>) o;
+      nl.forEach(
+          (n, v) -> {
+            if (v instanceof NamedList || v instanceof List) insertPackageInfo(v, req);
+          });
       Object v = nl.get("class");
       if (v instanceof String) {
         String klas = (String) v;
         PluginInfo.ClassName parsedClassName = new PluginInfo.ClassName(klas);
         if (parsedClassName.pkg != null) {
           SolrClassLoader solrClassLoader = req.getCore().getLatestSchema().getSolrClassLoader();
-          MapWriter mw = solrClassLoader instanceof PackageListeningClassLoader ?
-              ((PackageListeningClassLoader) solrClassLoader).getPackageVersion(parsedClassName) : null;
+          MapWriter mw =
+              solrClassLoader instanceof PackageListeningClassLoader
+                  ? ((PackageListeningClassLoader) solrClassLoader)
+                      .getPackageVersion(parsedClassName)
+                  : null;
           if (mw != null) nl.add("_packageinfo_", mw);
         }
       }
-
     }
-
   }
 
-  private static Set<String> subPaths = new HashSet<>(Arrays.asList(
-      "version",
-      "uniquekey",
-      "name",
-      "similarity",
-      "defaultsearchfield",
-      "solrqueryparser",
-      "zkversion"
-  ));
+  private static final Set<String> subPaths =
+      new HashSet<>(
+          Set.of(
+              "version",
+              "uniquekey",
+              "name",
+              "similarity",
+              "defaultsearchfield",
+              "solrqueryparser",
+              "zkversion"));
+
   static {
     subPaths.addAll(level2.keySet());
   }
@@ -258,10 +285,10 @@ public class SchemaHandler extends RequestHandlerBase implements SolrCoreAware, 
   @Override
   public SolrRequestHandler getSubHandler(String subPath) {
     List<String> parts = StrUtils.splitSmart(subPath, '/', true);
-    String prefix =  parts.get(0);
-    if(subPaths.contains(prefix)) return this;
+    String prefix = parts.get(0);
+    if (subPaths.contains(prefix)) return this;
 
-    if(managedResourceRequestHandler != null) return managedResourceRequestHandler;
+    if (managedResourceRequestHandler != null) return managedResourceRequestHandler;
 
     return null;
   }
@@ -279,18 +306,33 @@ public class SchemaHandler extends RequestHandlerBase implements SolrCoreAware, 
   @Override
   public void inform(SolrCore core) {
     isImmutableConfigSet = SolrConfigHandler.getImmutable(core);
-    this.managedResourceRequestHandler =  new ManagedResourceRequestHandler(core.getRestManager());
+    this.managedResourceRequestHandler = new ManagedResourceRequestHandler(core.getRestManager());
   }
 
   @Override
   public Collection<Api> getApis() {
-    return ApiBag.wrapRequestHandlers(this, "core.SchemaRead",
-        "core.SchemaRead.fields",
-        "core.SchemaRead.copyFields",
-        "core.SchemaEdit",
-        "core.SchemaRead.dynamicFields_fieldTypes"
-        );
 
+    final List<Api> apis = new ArrayList<>();
+    apis.addAll(AnnotatedApi.getApis(new SchemaInfoAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaUniqueKeyAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaVersionAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaSimilarityAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaZkVersionAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaListAllFieldsAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaGetFieldAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaListAllCopyFieldsAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaListAllDynamicFieldsAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaGetDynamicFieldAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaListAllFieldTypesAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaGetFieldTypeAPI(this)));
+    apis.addAll(AnnotatedApi.getApis(new SchemaBulkModifyAPI(this)));
+
+    return apis;
+  }
+
+  @Override
+  public Collection<Class<? extends JerseyResource>> getJerseyResources() {
+    return List.of(SchemaNameAPI.class);
   }
 
   @Override
@@ -298,8 +340,8 @@ public class SchemaHandler extends RequestHandlerBase implements SolrCoreAware, 
     return Boolean.TRUE;
   }
 
-  private  class ManagedResourceRequestHandler extends RequestHandlerBase implements PermissionNameProvider {
-
+  private class ManagedResourceRequestHandler extends RequestHandlerBase
+      implements PermissionNameProvider {
 
     private final RestManager restManager;
 
